--- a/package.json
+++ b/package.json
@@ -10,9 +10,16 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@headlessui/react": "^2.2.0",
+    "@heroicons/react": "^2.2.0",
     "@tailwindcss/vite": "^4.0.15",
+    "flowbite-react": "^0.11.2",
+    "headlessui": "^0.0.0",
+    "heroicons": "^2.2.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-icon": "^1.0.0",
+    "react-icons": "^5.5.0",
     "tailwindcss": "^4.0.15"
   },
   "devDependencies": {
